<?xml version="1.0"?>
<package format="2">
  <name>plan_env</name>
  <version>1.2.0</version>
  <description>
    The plan_env package
  </description>
  <author email="iszhouxin@zju.edu.cn">iszhouxin</author>
  <maintainer email="hyx020222@gmail.com">Eason Hua</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>octomap</depend>

  <build_depend>sdf_tools</build_depend>

    <exec_depend>sdf_tools</exec_depend>

  <export>
  </export>
</package>
